14.0.1
------

14.0.0
------
(RB=1058380)
Updated BatchCreateResponseEnvelope.CollectionCreateResponseItem with HttpStatus.
Fixed the bug in setting ID for CollectionCreateResponseItem.

13.0.7
------
(RB=1056932)
Include Content-Type on all error responses.

13.0.6
------
(RB=1056963)
Increase HttpClient default shutdown timeout from 5s to 15s

(RB=1058309)
Bump open source plugin to Gradle 4.0

13.0.5
------
(RB=1045941)
Provide Location for BATCH_CREATE.

(RB=1056106)
Added BackupRequestsConverter and a dedicated ScheduledThreadPool for latencies notifier in BackupRequestsClient

13.0.4
------
(RB=1051427)
Allow createDefaultTransportClientFactories to support https scheme as well

(RB=1051811)
Disabled few flaky tests.

(RB=1026759)
Fix testShutdownRequestOutstanding flaky test

(RB=1051941)
Allowing user to specify the "expected server's certificate principal name"
to verify the identify of the server in http 1.1

(RB=1028226)
Refactoring shutdown Netty Client to AbstractNettyClient and ChannelPoolManager

13.0.3
------
(RB=1050311)
Temporarily remove the content type check for multiplexed requests.

13.0.2
------
(RB=1016157)
Update D2 LoadBalancerStrategyProperties PDSC file with new D2Event properties
(RB=1048885)
Fix pegasus test failure

13.0.1
------
(RB=924997)
Add D2Event support

13.0.0
------
(RB=1041067)
Bump open source to Gradle 3.5. Make most tasks cacheable.

12.0.3
------
(RB=1045362)
Fix NPE when client is using D2 and does not set R2Constants.OPERATION on request context.

12.0.2
------
(RB=1005059)
Logs a warning if maxResponseSize greater than max int is set to the HttpNettyChannelPoolFactory

(RB=1042879)
Reintroducing UnionDataSchema#getType() to ease the migration to UnionDataSchema#getTypeByMemberKey().

12.0.1
------
(RB=1034793)
Improves HTTP/2 error handling

12.0.0
------
(RB=978263)
Initial set of changes in the data schema layer to support aliasing Union members.

(RB=984126)