@@ -26,6 +26,7 @@ import io.netty.handler.codec.http2.DefaultHttp2ConnectionEncoder;
 import io.netty.handler.codec.http2.DefaultHttp2FrameReader;
 import io.netty.handler.codec.http2.DefaultHttp2FrameWriter;
 import io.netty.handler.codec.http2.DefaultHttp2HeadersDecoder;
+import io.netty.handler.codec.http2.DefaultHttp2LocalFlowController;
 import io.netty.handler.codec.http2.Http2Connection;
 import io.netty.handler.codec.http2.Http2ConnectionDecoder;
 import io.netty.handler.codec.http2.Http2ConnectionEncoder;
@@ -38,9 +39,15 @@ import io.netty.handler.codec.http2.Http2Settings;
 import io.netty.handler.codec.http2.StreamBufferingEncoder;
 import io.netty.util.internal.ObjectUtil;
 
+import static io.netty.handler.codec.http2.DefaultHttp2LocalFlowController.DEFAULT_WINDOW_UPDATE_RATIO;
+
 
 class Http2StreamCodecBuilder extends AbstractHttp2ConnectionHandlerBuilder<Http2StreamCodec, Http2StreamCodecBuilder>
 {
+  // TODO: Consider exposing these as configurable values
+  private final int MAX_INITIAL_STREAM_WINDOW_SIZE = 8 * 1024 * 1024;
+  private final boolean AUTO_REFILL_CONNECTION_WINDOW = true;
+
   private long _maxContentLength = -1;
   private long _gracefulShutdownTimeoutMillis = -1;
   private Http2Connection _connection = null;
@@ -95,6 +102,8 @@ class Http2StreamCodecBuilder extends AbstractHttp2ConnectionHandlerBuilder<Http
       encoder = new StreamBufferingEncoder(encoder);
     }
 
+    _connection.local().flowController(
+        new DefaultHttp2LocalFlowController(_connection, DEFAULT_WINDOW_UPDATE_RATIO, AUTO_REFILL_CONNECTION_WINDOW));
     Http2ConnectionDecoder decoder = new DefaultHttp2ConnectionDecoder(_connection, encoder, reader);
 
     super.codec(decoder, encoder);
@@ -112,6 +121,9 @@ class Http2StreamCodecBuilder extends AbstractHttp2ConnectionHandlerBuilder<Http
     ObjectUtil.checkPositive(_maxContentLength, "maxContentLength");
     ObjectUtil.checkPositive(_gracefulShutdownTimeoutMillis, "gracefulShutdownTimeoutMillis");
     ObjectUtil.checkNotNull(_connection, "connection");
+
+    // HTTP/2 initial settings
+    initialSettings.initialWindowSize(Math.min(MAX_INITIAL_STREAM_WINDOW_SIZE, (int)_maxContentLength));
 
     Http2StreamCodec codec = new Http2StreamCodec(decoder, encoder, initialSettings);
     super.frameListener(new Http2FrameListener(_connection, codec, _maxContentLength));
